# aoc2015

./: Cargo.toml  README.md
src/: main.rs
src/utils/bespoke/: ingredient.rs  magicentity.rs  mod.rs  passwordgenerator.rs  present.rs  reindeer.rs  rpgentity.rs  rpgitem.rs  simplecomputer.rs  spell.rs
template/: day00.rs
