[package]
name = "aoc2015"
version = "0.1.0"
edition = "2021"
authors = ["Connor Mooney-Collett <connor.mooneycollett@gmail.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aoc-utils = { git = "https://github.com/misfits42/aoc-utils", branch = "main" }
fancy-regex = "0.10.0"
itertools = "0.10.5"
lazy_static = "1.4.0"
md-5 = "0.10.5"
serde_json = "1.0.91"
strum = { version = "0.24", features = ["derive"] }
